<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_metallic_background"
                android:padding="@dimen/local_padding">
    <ImageView
            android:id="@+id/basicScriptureScreen_imgAvatar"
            style="@style/san_Avatar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/profile_image_background"
            android:src="@drawable/ta" />
    <TextView
            android:id="@+id/basicScriptureScreen_name"
            style="@style/san_Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/user"
            android:layout_alignRight="@+id/basicScriptureScreen_txtDescription"
            android:layout_alignTop="@+id/basicScriptureScreen_imgAvatar"
            android:layout_alignLeft="@+id/basicScriptureScreen_txtDescription"/>
    <TextView
            android:id="@+id/basicScriptureScreen_txtDescription"
            style="@style/san_Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_message"
            android:minHeight="30dp"
            android:textSize="14sp"
            android:text="@string/profile_description"
            android:layout_toRightOf="@+id/basicScriptureScreen_imgAvatar"
            android:layout_alignBottom="@+id/basicScriptureScreen_imgAvatar"
            android:layout_below="@+id/basicScriptureScreen_name"/>
    <TableLayout
            android:id="@+id/basicScriptureScreen_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/basicScriptureScreen_imgAvatar"
            android:layout_marginTop="@dimen/basic_tablemargin">
        <TableRow
                android:id="@+id/basicScriptureScreen_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="@integer/row_length">
            <Button
                    android:id="@+id/btnAvailable"
                    style="@style/san_Button_Text"
                    android:layout_height="wrap_content"
                    android:layout_width="@dimen/basic_btnwith"
                    android:background="@drawable/button_blue"
                    android:text="@string/screen_available"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/basic_btnmargin"
                    android:padding="@dimen/local_padding"/>
            <Button
                    android:id="@+id/btnViewProfile"
                    style="@style/san_Button_Text"
                    android:layout_width="@dimen/basic_btnwith"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_orange"
                    android:padding="@dimen/local_padding"
                    android:text="@string/view_activies"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/basic_btnmargin"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>
